Fixed alignment in header.

--- a/Crito/Styles/_Base.scss
+++ b/Crito/Styles/_Base.scss
@@ -9,6 +9,7 @@
 
 .line {
     background: RGBA(255,255,255,0.2);
+    padding: 0;
 
     &.horizontal {
         height: 1px;
