--- a/Crito/Styles/_Header.scss
+++ b/Crito/Styles/_Header.scss
@@ -2,6 +2,15 @@ header {
     background: #f0efe9;
     color: black;
 
+    .col {
+        padding: 0;
+    }
+
+    .row {
+        padding: 0;
+        margin: 0;
+    }
+
     a {
         color: black;
         text-decoration: none;
